--- a/css/style.css
+++ b/css/style.css
@@ -267,7 +267,6 @@ body .home .content p {
 
     .header{
         top: 0; left:0; right:0;
-        padding: 1.5rem 2rem;
     }
 
 
@@ -303,8 +302,8 @@ body .home .content p {
     }
 
     .home .image img{
-        width: auto;
-        height: 100vh;
+        width: 100%;
+        height: 70vh;
     }
 
     .home .content{
